some vector work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 project(Lab_7_vectorize C)
 
 set(CMAKE_C_STANDARD 99)
-#set(CMAKE_C_FLAGS )
-add_executable(Lab_7_vectorize main.c )
+
+set(CMAKE_C_FLAGS "-g -O3 -msse3")
+add_executable(Lab_7_vectorize  vectorize.c blas.c)
